style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
}

html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}

:root {
    --primary: #df8e16;
    --secondary: #1e2035;
}



.portfolio-btn {
    background: var(--primary);
    color: #fff;
    width: 120px;
    height: 42px;
    font-size: 19px;
    font-weight: 300;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    cursor: pointer;
    transition: .3s;
}

.portfolio-btn:hover {
    filter: brightness(80%);
}

.contact {
    color: #fff;
    width: 40px;
    height: 40px;
    margin: 4px 0;
    font-size: 22px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-decoration: none;
    opacity: .8;
    transition: .3s;
}

.contact:hover {
    opacity: 1;
    transform: scale(1.2);
}

.hexagon {
    position: absolute;
    z-index: -1;
    max-width: 360px;
    opacity: .4;
    border-radius: 50%;
}



.nav {
    width: 100%;
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    padding: 0 32px;
    position: fixed;
    top: 0;
    z-index: 30;
    transition: .5s;
}

.nav.on {
    background: var(--secondary);
}

.nav-logo {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-decoration: none;
}

.nav-logo i {
    color: var(--primary);
    font-size: 28px;
    font-weight: 700;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.nav-logo p {
    color: #fff;
    font-size: 16px;
    font-weight: 500;
    margin-top: -4px;
}

.nav-burger {
    background: none;
    color: #fff;
    border: none;
    font-size: 34px;
    cursor: pointer;
    transition: .3s;
    
    display: none;
}

.nav-burger:hover {
    transform: scale(.94);
}

.nav-close {
    background: none;
    color: #fff;
    border: none;
    font-size: 42px;
    cursor: pointer;
    transition: .3s;
    position: absolute;
    top: 10px;
    right: 40px;

    display: none;
}

.nav-close:hover {
    transform: scale(.9);
}

.nav-links {
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 70%;
}

.nav-link {
    cursor: pointer;
    transition: .3s;
    list-style: none;
}

.nav-link:hover {
    transform: scale(.9);
    filter: brightness(80%);
}

.nav-link a {
    color: #fff;
    text-decoration: none;
    font-size: 24px;
}

.nav-links li:last-child {
    margin-left: 30px;
    list-style: none;
}

@media screen and (max-width: 1000px) {
    .nav-link a {
        font-size: 22px;
    }
    .nav-links li:last-child {
        display: none;
    }
}

@media screen and (max-width: 800px) {
    .nav {
        justify-content: space-between;
        padding:  0 40px;
    }
    .nav-burger {
        display: block;
    }
    .nav-close {
        display: block;
    }
    .nav-links {
        background: #000000ce;
        position: fixed;
        justify-content: space-around;
        flex-direction: column;
        top: 0;
        right: 0;
        left: 0;
        bottom: 0;
        width: 100%;
        padding: 60px 0;
        transform: translateY(-100%);
        transition: .5s;
    }
    .nav-links.on {
        transform: translateX(0);
    }
    .nav-link {
        width: 100%;
        height: 100px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
    .nav-link:hover {
        background: #000;
        transform: unset;
    }
    .nav-link a {
        width: 100%;
        height: 100%;
        font-size: 24px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
}



.home {
    background: url(images/background.jpg);
    background-size: cover;
    background-attachment: fixed;
    width: 100%;
    height: 620px;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 0 100px;
}

.home-bg {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;

    object-fit: cover;
    -o-object-fit: cover;

    z-index: -1;
}

.home-text {
    color: #fff;
    margin-top: 40px;
}

.home-text h2 {
    font-size: 28px;
    font-weight: 400;
}

.home-text h1 {
    max-width: 400px;
    line-height: 60px;
    font-size: 70px;
    font-weight: 900;
}

.home-text h3 {
    color: #d3d1d1;
    font-size: 24px;
    font-weight: 300;
}

.home-text > a {
    margin-top: 40px;
}

.home-contacts {
    position: absolute;
    bottom: 0;
    right: 0;
    width: 70px;
    height: 50%;
    padding-bottom: 20px;
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;
    flex-direction: column;
}

.home-arrows {
    color: #fff;
    font-size: 38px;
    position: absolute;
    bottom: 40px;
    left: 50%;
    transform: translateX(-50%);
    animation: downUpArrows 1s alternate infinite;
}

@keyframes downUpArrows {
    from {
        transform: translateY(0) translateX(-50%);
    } to {
        transform: translateY(20%) translateX(-50%);
    }
}

@media screen and (max-width: 900px) {
    .home {
        padding: 0 60px;
    }
}

@media screen and (max-width: 600px) {
    .home {
        padding: 0 32px;
        height: 700px;
    }
    .home-text {
        text-align: center;
    }
    .home-text h1 {
        font-size: 10vw;
        line-height: 40px;
        margin: 14px 0;
    }
    .home-text > a {
        margin: 50px auto;
    }
    .home-contacts {
        width: 50px;
        padding-bottom: 8px;
    }
}



.gallery {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height: 800px;
    position: relative;
}

.gallery-text {
    width: 630px;
    margin-bottom: 30px;
}

.gallery-text h2 {
    color: var(--secondary);
    font-size: 34px;
    font-weight: 500;
}

.gallery-text p {
    max-width: 500px;
    font-size: 16px;
    line-height: 22px;
}

.gallery-projects {
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 800px;
    flex-wrap: wrap;
}

.gallery-images-wrap {
    background: red;
    width: 200px;
    height: 200px;
    margin: 8px;
    border-radius: 8px;
    overflow: hidden;
    cursor: pointer;
    transition: .3s;
}

.gallery-images-wrap:hover {
    filter: brightness(80%) grayscale(100%);
}

.gallery-images-wrap:nth-child(4) {
    width: 416px;
}

.gallery-images-wrap:nth-child(4) > img {
    width: 100%;
    height: unset;
}

.gallery-images-wrap > img {
    width: 100%;
    height: 100%;
}

.gallery-link {
    color: var(--primary);
    text-decoration: none;
    position: absolute;
    bottom: 56px;
    left: 26%;
}

.gallery-link:hover {
    filter: brightness(60%);
}

.gallery .hexagon:nth-child(4) {
    left: -120px;
    top: -60px;
}

.gallery .hexagon:last-child {
    bottom: -120px;
    right: -150px;
}

@media screen and (max-width: 800px) {
    .gallery {
        height: 900px;
        padding-top: 35px;
    }
    .gallery-text {
        text-align: center;
        max-width: 90%;
        margin-bottom: 50px;
    }
    .gallery-projects {
        padding-bottom: 216px;
        max-width: 400px;
    }
    .gallery-images-wrap {
        width: 160px;
        height: 160px;
    }
    .gallery-images-wrap:nth-child(4) {
        width: 336px;
        position: absolute;
        bottom: 118px;
    }
    .gallery .hexagon:nth-child(4) {
        top: -220px;
    }
    .gallery .hexagon:last-child {
        bottom: -150px;
        right: -220px;
    }
}

@media screen and (max-width: 600px) {
    .gallery-images-wrap {
        margin: 6px;
    }
    .gallery-images-wrap:nth-child(4) {
        bottom: 112px;
    }
    .gallery-link {
        bottom: 46px;
        left: 50%;
        transform: translateX(-50%);
    }
    .gallery .hexagon:nth-child(4) {
        left: -200px;
    }
    .gallery .hexagon:last-child {
        right: -280px;
    }
}



.dev {
    background: rgba(0, 0, 0, 0.151);
    height: 600px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    position: relative;
}

.dev-text {
    max-width: 800px;
    text-align: center;
    margin-bottom: 50px;
}

.dev-text h3 {
    color: var(--primary);
    font-size: 20px;
    font-weight: 500;
    filter: brightness(90%);
}

.dev-text h2 {
    margin-bottom: 20px;
}

.dev-text h2 strong {
    color: var(--secondary);
}

.dev-text p {
    max-width: 600px;
    font-size: 18px;
}

.dev-tool {
    text-decoration: none;
    font-size: 80px;
    margin: 30px;
    color: var(--secondary);
}

.dev-tool i {
    transition: .3s;
}

.dev-tool i:hover {
    transform: scale(.96);
}

.dev .hexagon {
    bottom: -90px;
    left: -120px;
}

@media screen and (max-width: 800px) {
    .dev .hexagon {
        left: -200px;
    }
}

@media screen and (max-width: 600px) {
    .dev {
        height: 700px;
    }
    .dev .hexagon {
        left: -280px;
    }
    .dev-text {
        padding: 22px;
    }
    .dev-tool {
        font-size: 60px;
        margin: 20px;
    }
}

